# rust-api-with-axum

./: Cargo.toml  README.md  run_backend_tests.sh  serve_backend.sh  serve_frontend.sh
backend/: Cargo.toml
backend/src/: main.rs  schema.rs
backend/src/common/: mod.rs
backend/src/empires/: router.rs  service.rs
backend/src/locations/: router.rs  service.rs
backend/src/users/: router.rs  service.rs
frontend/: Cargo.toml  index.html  style.css
frontend/src/: lib.rs
frontend/src/api/: mod.rs
frontend/src/components/: forms.rs  mod.rs  navbar.rs
frontend/src/pages/: mod.rs
src/common/: middleware.rs  security.rs
src/empires/: router.rs
src/locations/: router.rs
